--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ deploy:
   provider: s3
   access_key_id: $AWS_ACCESS_KEY_ID
   secret_access_key: $AWS_SECRET_ACCESS_KEY
-  bucket: andreaffonso.com
+  bucket: $S3_BUCKET
   skip_cleanup: true
   local-dir: public
   on:
